--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
   ],
   "engines": {
     "node": "8.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/scottbur1323/SDTC-V1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/scottbur1323/SDTC-V1/issues"
+  },
+  "homepage": "https://github.com/scottbur1323/SDTC-V1#readme"
 }
